# py-dissimilar

./: Cargo.toml  README.md  dissimilar.pyi  pyproject.toml  test_dissimilar.py
.github/workflows/: CI.yml
src/: lib.rs
